# Practice_TSU

./: .gitignore
.github/workflows/: python-app.yml
lr_3/tiny-database/: .pre-commit-config.yaml  main.py  pyproject.toml
lr_3/tiny-database/database/: database.py
lr_3/tiny-database/tests/: database_test.py  test_database.py
